--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -111,6 +111,7 @@
     &__title-block {
         display: flex;
         align-items: center;
+        text-align: left;
         @media (max-width: 1095px) {
             width: 100%;
         }
