--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -544,6 +544,7 @@
     &_type_cancel {
         width: 170px;
         margin: 0 auto;
+        background: transparent;
         cursor: default;
         &.kam-112908-button_active {
             background: #00d1d2;
