--- a/src/styles/resultStyles.scss
+++ b/src/styles/resultStyles.scss
@@ -11,6 +11,12 @@
     display: flex;
     flex-wrap: wrap;
     width: calc(100% + 60px);
+    @media (max-width: 1024px) {
+        width: calc(100% + 15px);
+    }
+    @media (max-width: 768px) {
+        width: calc(100% + 20px);
+    }
 }
 .flavor-results__product {
     text-align: left;
@@ -23,8 +29,16 @@
     vertical-align: baseline;
     text-decoration: none;
     color: inherit;
-    width: calc((100%/4) - 60px);
+    width: calc((100% / 4) - 60px);
     margin: 0 60px 30px 0;
+    @media (max-width: 1024px) {
+        width: calc((100% / 4) - 15px);
+        margin: 0 15px 30px 0;
+    }
+    @media (max-width: 768px) {
+        width: calc((100% / 2) - 20px);
+        margin: 0 20px 20px 0;
+    }
 }
 .flavor-results__product-img {
     text-align: left;
@@ -66,7 +80,7 @@
     height: 35px;
     object-fit: contain;
     object-position: center;
-    margin-right: 10px; 
+    margin-right: 10px;
 }
 .flavor-results__product-taste {
     text-align: left;
@@ -82,4 +96,54 @@
     font-size: 12px;
     line-height: 130%;
     color: #949494;
+}
+.flavor-results__list__price {
+    width: 176px;
+    text-align: left;
+    letter-spacing: 1.2px;
+    color: #34303d;
+    box-sizing: border-box;
+    margin: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
+    display: flex;
+    align-items: center;
+    align-self: flex-start;
+    padding: 10px 20px;
+    border-radius: 20px 20px 20px 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #ef8727;
+}
+.flavor-results__list__price-text {
+    text-align: left;
+    letter-spacing: 1.2px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
+    display: block;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 100%;
+    color: #ffffff;
+    margin-right: 10px;
+}
+.flavor-results__list__price-ds {
+    text-align: left;
+    letter-spacing: 1.2px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 100%;
+    color: #ffffff;
 }
