--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -703,8 +703,8 @@
     }
     &__arrow {
         position: absolute;
-        top: 1px;
-        left: -4px;
+        top: 13px;
+        left: 14px;
         cursor: pointer;
         z-index: 1;
         svg {
@@ -717,8 +717,8 @@
     }
     &__close-button {
         position: absolute;
-        top: -1px;
-        right: -5px;
+        top: 11px;
+        right: 11px;
         cursor: pointer;
         z-index: 1;
         svg {
@@ -737,4 +737,7 @@
     .kam-112908-popin__title {
         letter-spacing: -0.5px;
     }
+}
+.kam-112908-popin__arrow_content_begin {
+    display: none;
 }
